# textar

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  textar.pc.in
src/: CMakeLists.txt  entry.c  entry.h  list.c  list.h  main.c  path.c  path.h  stdimp.c  stdimp.h  textar-internals.h  textar.c  textar.h
tests/: CMakeLists.txt  archive.sh  entry.ts  list.ts  pathfn.ts
